--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,4 @@ Description: This package is an example of an OpenCPU App. It demonstrates
     basic functionality of the API and Javascript library.
 License: Apache2
 LazyData: true
+RoxygenNote: 6.0.1
